let villagers talk to each other

--- a/vsvillage.csproj
+++ b/vsvillage.csproj
@@ -22,6 +22,10 @@
 		</Reference>
 	</ItemGroup>
 	
+	<ItemGroup>
+	  <PackageReference Include="protobuf-net" Version="3.0.101" />
+	</ItemGroup>
+	
 	<ItemGroup Condition="'$(Configuration)' == 'Release'">
 		<None Include="resources/**">
 			<Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
