Use VS lib folder for dependencies

--- a/vsvillage.csproj
+++ b/vsvillage.csproj
@@ -20,10 +20,10 @@
 			<HintPath>$(VINTAGE_STORY)/Mods/VSSurvivalMod.dll</HintPath>
 			<Private>false</Private>
 		</Reference>
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <PackageReference Include="protobuf-net" Version="3.0.101" />
+		<Reference Include="protobuf-net">
+			<HintPath>$(VINTAGE_STORY)/Lib/protobuf-net.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
 	</ItemGroup>
 	
 	<ItemGroup Condition="'$(Configuration)' == 'Release'">
