--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,30 +1,18 @@
 {
 	"version": "0.2.0",
-	"configurations": [{
-		"name": "Launch Client (Core .NET7)",
-		"type": "coreclr",
-		"request": "launch",
-		"preLaunchTask": "Build (Debug)",
-		"program": "${env:VINTAGE_STORY}/Vintagestory.exe",
-		"args": [
-			"--playStyle" , "preset-surviveandbuild",
-			"--addModPath", "${workspaceFolder}/bin/Debug/Net7.0",
-			"--addOrigin" , "${workspaceFolder}/resources/assets",
-		],
-		"console": "internalConsole",
-		"internalConsoleOptions": "openOnSessionStart",
-	},{
-		"name": "Launch Client (.NET)",
-		"type": "clr",
-		"request": "launch",
-		"preLaunchTask": "Build (Debug)",
-		"program": "${env:VINTAGE_STORY}/Vintagestory.exe",
-		"args": [
-			"--playStyle" , "preset-surviveandbuild",
-			"--addModPath", "${workspaceFolder}/bin/Debug/Net7.0",
-			"--addOrigin" , "${workspaceFolder}/resources/assets",
-		],
-		"console": "internalConsole",
-		"internalConsoleOptions": "openOnSessionStart",
-	}]
+	"configurations": [
+		{
+			"name": "Launch Client (Core .NET7)",
+			"type": "coreclr",
+			"request": "launch",
+			"preLaunchTask": "Build (Debug)",
+			"program": "${env:VINTAGE_STORY}/Vintagestory.exe",
+			"args": [
+				"--addModPath",
+				"${workspaceFolder}/bin/vsdebug",
+			],
+			"console": "internalConsole",
+			"internalConsoleOptions": "openOnSessionStart",
+		}
+	]
 }
